changed formatting on get_book_review.html to match books.html

--- a/templates/bookreview.html
+++ b/templates/bookreview.html
@@ -77,7 +77,7 @@
 
 
                 <!-- if there are no reviews:  -->
-                {% if total == 0: %}
+                {% if not review_results: %}
                 <div style="font-size:1.5rem; font-style: italic;">
                     <p>This book doesn't have any reviews</p>
                     <p>Be the first to add a review on the right!!</p>
@@ -91,80 +91,86 @@
                 <div class="row" style="margin: 20px 0;">
                     <div class="col" style="margin-left: 20px; border-bottom: solid 2px black;">
 
-                        <div> <span style="font-size: 1.5em;">
+                        <div class="row" style="justify-content: space-between; align-items: flex-end;">
+
+                            <div class="col-3" style="text-align:right;">
+                                <span style="font-size:10px;">
+
+                                    <!-- rating -->
+                                    {% if review.rating == '1' %}
+                                    <i class="material-icons">star</i><i class="material-icons">star_outline</i><i
+                                        class="material-icons">star_outline</i><i
+                                        class="material-icons">star_outline</i><i
+                                        class="material-icons">star_outline</i>
+                                    {% endif %}
+
+                                    {% if review.rating == '2' %}
+                                    <i class="material-icons">star</i><i class="material-icons">star</i><i
+                                        class="material-icons">star_outline</i><i
+                                        class="material-icons">star_outline</i><i
+                                        class="material-icons">star_outline</i>
+                                    {% endif %}
+
+                                    {% if review.rating == '3' %}
+                                    <i class="material-icons">star</i><i class="material-icons">star</i><i
+                                        class="material-icons">star</i><i class="material-icons">star_outline</i><i
+                                        class="material-icons">star_outline</i>
+                                    {% endif %}
+
+                                    {% if review.rating == '4' %}
+                                    <i class="material-icons">star</i><i class="material-icons">star</i><i
+                                        class="material-icons">star</i><i class="material-icons">star</i><i
+                                        class="material-icons">star_outline</i>
+                                    {% endif %}
+
+                                    {% if review.rating == '5' %}
+                                    <i class="material-icons">star</i><i class="material-icons">star</i><i
+                                        class="material-icons">star</i><i class="material-icons">star</i><i
+                                        class="material-icons">star</i>
+                                    {% endif %}
+                                </span>
+                            </div>
+
+                        
+            <!-- --------------- delete --------------------  -->
+            {% if review.user_id == session['user_id']: %}
+            <div class="col" style="text-align: right;">
+                <a href="/delete_review/{{ review.book_id }}/{{ review.id }}"><span class="fas fa-trash" style="font-size: 1.5em;"
+                        data-toggle="tooltip" data-placement="top" title="delete" id="deleteImg"></span></a>
+            </div>
+            {% endif %}
+            <!-- -----------------------------------------  -->
+
+                        
+
+                        </div>
+                        <div class="row">
+                            <div class="col">
                                 <!-- user alias as a link  -->
-                                <a href="/getUser/{{ review.user_id }}">{{ review.alias|upper }} :</a>
-
+                                <a href="/getUser/{{ review.user_id }}">{{ review.alias|upper }}</a> said:
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
                                 <!-- review content -->
-
                                 {{ review.content }}
-                            </span>
+                            </div>
                         </div>
-
-
-                        <!-- add stars in place of number  -->
-                        <div style="margin-top: 10px;">
-                            <!-- rating -->
-                            <h6>Rating: {{ review.rating }}</h6>
-
-
-                            {% if review.rating == '1' %}
-                            <i class="material-icons">star</i><i class="material-icons">star_outline</i><i
-                                class="material-icons">star_outline</i><i class="material-icons">star_outline</i><i
-                                class="material-icons">star_outline</i>
-                            {% endif %}
-
-                            {% if review.rating == '2' %}
-                            <i class="material-icons">star</i><i class="material-icons">star</i><i
-                                class="material-icons">star_outline</i><i class="material-icons">star_outline</i><i
-                                class="material-icons">star_outline</i>
-                            {% endif %}
-
-                            {% if review.rating == '3' %}
-                            <i class="material-icons">star</i><i class="material-icons">star</i><i
-                                class="material-icons">star</i><i class="material-icons">star_outline</i><i
-                                class="material-icons">star_outline</i>
-                            {% endif %}
-
-                            {% if review.rating == '4' %}
-                            <i class="material-icons">star</i><i class="material-icons">star</i><i
-                                class="material-icons">star</i><i class="material-icons">star</i><i
-                                class="material-icons">star_outline</i>
-                            {% endif %}
-
-                            {% if review.rating == '5' %}
-                            <i class="material-icons">star</i><i class="material-icons">star</i><i
-                                class="material-icons">star</i><i class="material-icons">star</i><i
-                                class="material-icons">star</i>
-                            {% endif %}
-
-                        </div>
-
-
-                        <div class="row" style="margin: 10px 0; justify-content: space-between;">
-
-                            <div>
-                                <!-- comment timestamp  -->
-                                <p> posted @ {{ review.updated_at|date: "M d, Y" }}
-                                </p>
+                        <div class="row" style="margin: 10px 0;">
+                            <div class="col">
+                                <!-- comment's timestamp  -->
+                                posted @ {{ review.updated_at }}
                             </div>
 
-                            <!-- --------------- delete --------------------  -->
-                            {% if review.user_id == session['user_id']: %}
-                            <div>
-                                <a href="/delete_review/{{ review.book_id }}/{{ review.id }}">
-                                    <span class="fas fa-trash" style="font-size: 1.5em;" data-toggle="tooltip"
-                                        data-placement="top" title="delete" id="deleteImg"></span></a>
-                            </div>
-                            {% endif %}
+                
 
-                            <!-- -----------------------------------------  -->
                         </div>
                     </div>
                 </div>
-                {% endfor %}
-
             </div>
+            {% endfor %}
+
+
 
             <!----------------  ADD A REVIEW  ------------------>
             <div class="col-5">
