--- a/templates/books.html
+++ b/templates/books.html
@@ -66,7 +66,7 @@
                 <!-- LOOP FOR LAST 3 REVIEWS -->
 
                 {% for review in results %}
-                <div class="row" style="margin-bottom: 20px; border-top: solid 2px #acd;">
+                <div class="row" style=" border-top: solid 2px #acd;">
                     <div class="col">
                         <!-- book title as link -->
                         <a href="/get_book_review/{{ review.book_id }}">
