--- a/templates/users.html
+++ b/templates/users.html
@@ -65,23 +65,17 @@
                     <div class="col">
 
                         <!-- user alias -->
-                        <h4><span id="myFont">User Alias: </span> {{ user_results[0].alias }}</h4>
+                        <h4 id="myFont">{{ user_results[0].alias }}</h4>
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="col">
-
-                        <!-- user name  -->
-                        <h4><span id="myFont">Name: </span>{{ user_results[0].name }}</h4>
-                    </div>
-                </div>
+                
 
                 <div class="row">
                     <div class="col">
 
                         <!-- user email  -->
-                        <h4><span id="myFont">Email: </span>{{ user_results[0].email }} </h4>
+                        <h4 id="myFont">{{ user_results[0].email }} </h4>
                     </div>
                 </div>
 
